--- a/src/main/webapp/admin/static.html
+++ b/src/main/webapp/admin/static.html
@@ -6,8 +6,8 @@
 
     <link rel="stylesheet" href="../components/bootstrap-3.3.7-dist/css/bootstrap.css" />
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
-    <!--<link rel="stylesheet" href="../components/font-awesome/css/font-awesome.css" />-->
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../components/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <!--<link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <!-- page specific plugin styles -->
 
     <!-- text fonts -->
@@ -41,28 +41,30 @@
     <![endif]-->
 
     <!-- basic scripts -->
-    <script src="https://cdn.bootcss.com/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/js/jquery-3.4.0.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/jquery/3.5.1/jquery.min.js"></script>-->
 
     <!--[if IE]>
-    <script src="https://cdn.bootcss.com/jquery-1.12.4/jquery.min.js"></script>
+    <script src="/js/jquery-1.12.4.min.js"></script>
     <![endif]-->
+    <!--<script src="https://cdn.bootcss.com/jquery-1.12.4/jquery.min.js"></script>-->
     <script type="text/javascript">
         if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
     </script>
     <script src="../js/bootstrap.js"></script>
-    <!--<script src="../components/jquery-ui/jquery-ui.min.js"></script>-->
-    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <!--<script src="../assets/js/jquery.validate.min.js"></script>-->
+    <script src="../components/jquery-ui/jquery-ui.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>-->
+    <script src="../assets/js/jquery.validate.min.js"></script>
     <!--<script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/jquery.validate.min.js"></script>-->
-    <script src="https://cdn.bootcss.com/jquery-validate/1.14.0/jquery.validate.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/jquery-validate/1.14.0/jquery.validate.min.js"></script>-->
     <!--<script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/localization/message_zh.js"></script>-->
 
     <!-- page specific plugin scripts -->
 
 
     <!--add by hhy-->
-    <!--<script src="../js/jquery.cookie.min.js"></script>-->
-    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="../js/jquery.cookie.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>-->
     <script src="../js/string_func.js"></script>
     <script src="/js/common.js" type="text/javascript"></script>
     <!-- end add by hhy-->
