高德地图KEY可配置

--- a/src/main/webapp/admin/static.html
+++ b/src/main/webapp/admin/static.html
@@ -1,4 +1,4 @@
-<head>
+﻿<head>
     <meta charset="utf-8"/>
     <title>资产位置管理后台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
