--- a/src/main/webapp/map/cluster.html
+++ b/src/main/webapp/map/cluster.html
@@ -11,116 +11,88 @@
       height: 100%;
       width: 100%;
     }
-
-    .input-card {
-      width: 25rem;
-    }
-
-    .input-card .btn {
-      width: 7rem;
-      margin-right: .7rem;
-    }
-
-    .input-card .btn:last-child {
-      margin-right: 0;
-    }
   </style>
 </head>
 <body>
 <div id="container" class="map" tabindex="0"></div>
-<div class="input-card">
-  <h4>聚合点效果切换</h4>
-  <div class="input-item">
-    <input type="button" class="btn" value="默认样式" id="add0" onclick='addCluster(0)'/>
-    <input type="button" class="btn" value="自定义图标" id="add1" onclick='addCluster(1)'/>
-    <input type="button" class="btn" value="完全自定义" id="add2" onclick='addCluster(2)'/>
-  </div>
-</div>
-<script src="//a.amap.com/jsapi_demos/static/china.js"></script>
-<script type="text/javascript"
-        src="https://webapi.amap.com/maps?v=1.4.15&key=592ac591c3ad221629d4e47448a81436&plugin=AMap.MarkerClusterer"></script>
+
+<script src="https://webapi.amap.com/maps?v=2.0&key=592ac591c3ad221629d4e47448a81436&plugin=AMap.MarkerCluster"></script>
+
 <script type="text/javascript">
-  var cluster, markers = [];
-var points=
+  var points = [
+    { weight: 20, lnglat:["113.265942","23.08983"], "name": '广州'},
+    { weight: 1, lnglat: ["108.939621", "34.343147"] },
+    { weight: 10, lnglat: ["112.985037", "23.15046"] },
+    { weight: 99, lnglat: ["110.361899", "20.026695"] },
+    { weight: 1, lnglat: ["121.434529", "31.215641"] },
+    { weight: 1, lnglat: ["120.682502", "28.011099"] },
+    { weight: 1, lnglat: ["126.687123", "45.787618"] },
+    { weight: 1, lnglat: ["103.970724", "30.397931"] }];
   var map = new AMap.Map("container", {
-    resizeEnable: true,
-    center: [105, 34],
-    zoom: 4
+    center: [104.937478,35.439575],
+    mapStyle: "amap://styles/grey",
+    zoom: 5
   });
-
-  for (var i = 0; i < points.length; i += 1) {
-    markers.push(new AMap.Marker({
-      position: points[i]['lnglat'],
-      content: '<div style="background-color: hsla(180, 100%, 50%, 0.7); height: 24px; width: 24px; border: 1px solid hsl(180, 100%, 40%); border-radius: 12px; box-shadow: hsl(180, 100%, 50%) 0px 0px 1px;"></div>',
-      offset: new AMap.Pixel(-15, -15)
-    }))
-  }
-
-  var count = markers.length;
+  var count = points.length;
+  // 数据中增加权重信息，以权重高的点为中心进行聚合
+  // 本示例中北京等城市中心点权重较高
+  // var points = [
+  // { weight: 8, lnglat:["116.408032","39.909729"], "name": '北京'},
+  // { weight: 8, lnglat:["121.461743","31.231584"], "name": '上海'},
+  // { weight: 8, lnglat:["113.265942","23.08983"], "name": '广州'},
+  // { weight: 8, lnglat:["104.059399","30.562253"], "name": '成都'},
+  // { weight: 1, lnglat: ["108.939621", "34.343147"] },
+  // { weight: 1, lnglat: ["112.985037", "23.15046"] },
+  // ...
+  // ]
   var _renderClusterMarker = function (context) {
-    var factor = Math.pow(context.count / count, 1 / 18);
+    // 聚合中点个数
+    var clusterCount = context.count;
     var div = document.createElement('div');
-    var Hue = 180 - factor * 180;
-    var bgColor = 'hsla(' + Hue + ',100%,50%,0.7)';
-    var fontColor = 'hsla(' + Hue + ',100%,20%,1)';
-    var borderColor = 'hsla(' + Hue + ',100%,40%,1)';
-    var shadowColor = 'hsla(' + Hue + ',100%,50%,1)';
-    div.style.backgroundColor = bgColor;
-    var size = Math.round(30 + Math.pow(context.count / count, 1 / 5) * 20);
+    // 聚合点配色
+    var defaultColor = [
+      '204,235,197',
+      '168,221,181',
+      '123,204,196',
+      '78,179,211',
+      '43,140,190',
+    ]
+    if(clusterCount >= 0 && clusterCount < 10) {
+      bgColor = defaultColor[0];
+    } else if(clusterCount >= 10 && clusterCount < 100){
+      bgColor = defaultColor[1];
+    } else if(clusterCount >= 100 && clusterCount < 1000) {
+      bgColor = defaultColor[2];
+    } else if(clusterCount >= 1000 && clusterCount < 10000) {
+      bgColor = defaultColor[3];
+    } else if(clusterCount >= 10000) {
+      bgColor = defaultColor[4];
+    }
+    div.style.backgroundColor = 'rgba(' + bgColor + ',.5)';
+    var size = Math.round(25 + Math.pow(clusterCount/count, 1 / 5) * 40);
     div.style.width = div.style.height = size + 'px';
-    div.style.border = 'solid 1px ' + borderColor;
+    div.style.border = 'solid 1px rgba(' + bgColor + ',1)';
     div.style.borderRadius = size / 2 + 'px';
-    div.style.boxShadow = '0 0 1px ' + shadowColor;
     div.innerHTML = context.count;
     div.style.lineHeight = size + 'px';
-    div.style.color = fontColor;
-    div.style.fontSize = '14px';
+    div.style.color = '#ffffff';
+    div.style.fontSize = '12px';
     div.style.textAlign = 'center';
     context.marker.setOffset(new AMap.Pixel(-size / 2, -size / 2));
-    context.marker.setContent(div)
+    context.marker.setContent(div);
   };
-
-  addCluster(2);
-
-  function addCluster(tag) {
-    if (cluster) {
-      cluster.setMap(null);
-    }
-    if (tag == 2) {//完全自定义
-      cluster = new AMap.MarkerClusterer(map, markers, {
-        gridSize: 80,
-        renderClusterMarker: _renderClusterMarker
-      });
-    } else if (tag == 1) {//自定义图标
-      var sts = [{
-        url: "https://a.amap.com/jsapi_demos/static/images/blue.png",
-        size: new AMap.Size(32, 32),
-        offset: new AMap.Pixel(-16, -16)
-      }, {
-        url: "https://a.amap.com/jsapi_demos/static/images/green.png",
-        size: new AMap.Size(32, 32),
-        offset: new AMap.Pixel(-16, -16)
-      }, {
-        url: "https://a.amap.com/jsapi_demos/static/images/orange.png",
-        size: new AMap.Size(36, 36),
-        offset: new AMap.Pixel(-18, -18)
-      }, {
-        url: "https://a.amap.com/jsapi_demos/static/images/red.png",
-        size: new AMap.Size(48, 48),
-        offset: new AMap.Pixel(-24, -24)
-      }, {
-        url: "https://a.amap.com/jsapi_demos/static/images/darkRed.png",
-        size: new AMap.Size(48, 48),
-        offset: new AMap.Pixel(-24, -24)
-      }];
-      cluster = new AMap.MarkerClusterer(map, markers, {
-        styles: sts,
-        gridSize: 80
-      });
-    } else {//默认样式
-      cluster = new AMap.MarkerClusterer(map, markers, {gridSize: 80});
-    }
+  var _renderMarker = function(context) {
+    var content = '<div style="background-color: rgba(255,255,178,.9); height: 18px; width: 18px; border: 1px solid rgba(255,255,178,1); border-radius: 12px; box-shadow: rgba(0, 0, 0, 1) 0px 0px 3px;"></div>';
+    var offset = new AMap.Pixel(-9, -9);
+    context.marker.setContent(content)
+    context.marker.setOffset(offset)
   }
+  var cluster = new AMap.MarkerCluster(map, points, {
+    gridSize: 60, // 聚合网格像素大小
+    renderClusterMarker: _renderClusterMarker, // 自定义聚合点样式
+    renderMarker: _renderMarker,   // 自定义非聚合点样式
+  });
+
 </script>
 </body>
 </html>
